cli/tests/067_test_no_run_type_error.out
[WILDCARD]error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const _a: string = 1;
      ~~
    at [WILDCARD]foo_test.ts[WILDCARD]
